Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27867

Styled QML text (Raised, Sunken, Outline) doesn't work when using native rendering

XMLWordPrintable

    • 57855fd6a2d3d0d3a1abbafa1000d6a1a7ce3d40

      QSGDefaultGlyphNode doesn't support text styles.
      Should we fallback to rendering native styled text in a QImage, or somehow implement the styles for the default glyph node?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            ylopes Yoann Lopes
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes