Implemented text styles for QSGDefaultGlyphNode.

Used when Text has renderType: Text.NativeRendering.

Task-number: QTBUG-27867
Change-Id: Id1262ef49e26229c86ebd2533b9f6de638bc75cb
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>